language/move-lang/tests/move_check/expansion/unpack_assign_other_expr.move
module M {
    struct G {}
    struct S { f: u64 }
    foo() {
        let f;
        S ( f ) = S { f: 0 };

        let f;
        S f = S { f: 0 };

        G () = G {};
        G {{}} = G{};
    }
}
